--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,7 @@
   ],
   "dependencies": {
     "angular": "1.2.26",
-    "moment": "^2.8.3"
+    "sugar": "^1.4.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.26",
