--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "angular-mocks": "1.2.26",
     "bootstrap": "^3.1.1",
+    "components-font-awesome": "^4.2.0",
     "jquery": "^2.1.1"
   }
 }
