--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
   ],
   "dependencies": {
     "angular": "1.2.26",
+    "angular-bootstrap": "0.12.0",
     "sugar": "^1.4.1"
   },
   "devDependencies": {
